sort.basic.cocktail.AlgCocktailSort1.scala.error
Compilation error:
AlgCocktailSort1:13: error: not found: value compte
    if (compte==0) {
        ^