sort.basic.cocktail.AlgCocktailSort1.scala.code
def cocktailSort() {
  for (i<- 0 to getNombreValeurs()-2) {
    var compt : Int = 0
    if (plusPetit(i+1,i)) {
      echange(i,i+1); compt = compt + 1;
    }
    for (j<- 0 to getNombreValeurs()-2-i ) {
    	if (plusPetit(j+1,j)) {
    		echange(j,j+1);
    	}    
  	}
    if (compte==0) {
      return
    }
  }
}